--- a/my-first-binder/hello.ipynb
+++ b/my-first-binder/hello.ipynb
@@ -18,7 +18,7 @@
     }
    ],
    "source": [
-    "string = \"Hello wordl from Binder\"\n",
+    "string = \"Hello world from Binder\"\n",
     "string"
    ]
   }
