changed kernel to base

--- a/my-first-binder/hello.ipynb
+++ b/my-first-binder/hello.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0feaad2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello wordl from Binder'"
+       "'Hello world from Binder'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
